--- a/store/templates/store/details.html
+++ b/store/templates/store/details.html
@@ -30,9 +30,9 @@
 <div class="product-details-container">
     <img class="thumbnaill" src="{{product.imageURL}}">
     <div class="product-details">
-        <h3>{{product.name}}</h3>
-        <p>Price: Ksh. {{product.price}}</p>
-        <p>{{product.desc}}</p>
+        <h5>{{product.name}}</h5>
+        <p class="text-muted">Price: Ksh. {{product.price}}</p>
+        <p class="text-muted">{{product.desc}}</p>
         <button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
     </div>
 </div>
