--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,44 @@ h1,h2,h3,h4,h5,h6{
 	padding: 10px;
 }
 
+.category--header{
+	display: flex;
+	justify-content: center;
+	margin-top: 5%;
+}
+.category--section{
+	/* background-color: rgba(6, 6, 6, 0.1); */
+	display: flex;
+	justify-content: center;
+	margin: 1% 10%;
+	padding: 1rem;
+	gap: 2rem;
+}
+.category{
+	width: 100%;
+	height: 100%;
+	
+	margin-bottom: 0.9rem;
+}
+
+.box-element-category{
+	
+	background-color: #fff;
+	border-radius: 4px;
+	padding: 10px;
+	position: relative;
+}
+
+.category--title{
+	display: flex;
+	justify-content: center;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	cursor: pointer;
+
+}
 .thumbnail{
 	width: 100%;
 	height: 200px;
@@ -155,3 +193,9 @@ h1,h2,h3,h4,h5,h6{
 	display: flex;
 	justify-content: center;
 }
+
+/* slider */
+.slider--image{
+	background-color: black;
+}
+
