--- a/store/templates/store/ads.html
+++ b/store/templates/store/ads.html
@@ -2,15 +2,16 @@
 {% load static %}
 {% block content %}
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
+
+<div id="carouselExampleIndicators" class="carousel slide"  data-ride="carousel" data-interval="3000">
 	<ol class="carousel-indicators">
 	  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 	  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 	  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
 	</ol>
-	<div class="carousel-inner">
+	<div class="carousel-inner" style="height: 40vh" >
 	  <div class="carousel-item active">
-		<img class="d-block w-100" src="{% static 'images/banner1.avif' %}" alt="First slide">
+		<img class="d-block w-100 h-100" src="{% static 'images/banner1.avif' %}" alt="First slide">
 	  </div>
 	  <div class="carousel-item">
 		<img class="d-block w-100" src="{% static 'images/banner2.png' %}" alt="Second slide">
@@ -29,6 +30,22 @@
 	</a>
   </div>
 </div>
-  
+
+<div class="category--header">
+	<h1>Category</h1>
+</div>
+
+<div class="row category--section" id="category">
+	{% for data in category %}
+	<div class="col-lg-2 box-element-category">
+		<img class="category" src="{{data.imageURL}}">
+		<div class="category--title">
+				<a href="category/{{data.id}}">
+					<h6><strong>{{data.title}}</strong></h6>
+				</a>
+			</div>
+		</div>
+	{% endfor %}
+</div>
 
 {% endblock content %}
