--- a/store/templates/store/category.html
+++ b/store/templates/store/category.html
@@ -1,8 +1,11 @@
 {% extends 'store/main.html' %}
 {% load static %}
 {% block content %}
-	<div class="row">
-		{% for product in products %}
+{% if products %}
+<p class="fs-3"><span class="text-muted ">{{products.category}}</span></p>
+{% endif %}
+<div class="row">
+	{% for product in products %}
 		<div class="col-lg-4">
 			<img class="thumbnail" src="{{product.imageURL}}">
 			<div class="box-element product">
@@ -11,7 +14,7 @@
 
 				<button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
 				
-				<a class="btn btn-outline-success" href="{{product.id}}">View</a>
+				<a class="btn btn-outline-success" href="store/{{product.id}}">View</a>
 				<p style="display: inline; float: right"><strong>Ksh.{{product.price}}</strong></p>
 
 			</div>
