--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -9,12 +9,15 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
 
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
-    />
+    /> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+  </head>
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
 
@@ -72,7 +75,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-      <a class="navbar-brand" href="{% url 'store' %}">Mohastores</a>
+      <a class="navbar-brand" href="{% url 'ads' %}">Mohastores</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -84,15 +87,16 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
+      
       <div class="collapse navbar-collapse gap-0" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'store' %}"
-              >Store <span class="sr-only">(current)</span></a
+            <a class="nav-link" href="{% url 'store'%}"
+              >Store</a
             >
           </li>
         </ul>
+        
 
         <div class="form-inline my-2 my-lg-0">
           {% if user.is_authenticated %}
@@ -121,7 +125,7 @@
           placeholder="Search"
           aria-label="Search"
         />
-        <button class="btn btn-outline-dark" type="submit">Search</button>
+        <button class="btn" type="submit">Search</button>
       </form>
     </div>
 
@@ -142,7 +146,7 @@
       const message = document.getElementById("msg");
       setTimeout(() => {
         message.style.display = "none";
-      }, 7000);
+      }, 5000);
     </script>
 
     <script
