--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 body{
-	background-color: hsl(0, 0%, 98%);
+	background-color: hsl(127, 56%, 20%);
 }
+/* #3F3F3F */
 
 h1,h2,h3,h4,h5,h6{
 	color:hsl(0, 0%, 30%);
