--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -74,8 +74,8 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-      <a class="navbar-brand" href="{% url 'ads' %}">Mohastores</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
+      <a class="navbar-brand text-dark" href="{% url 'ads' %}">Mohastores</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -91,7 +91,7 @@
       <div class="collapse navbar-collapse gap-0" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'store'%}"
+            <a class="nav-link text-dark" href="{% url 'store'%}"
               >Store</a
             >
           </li>
@@ -100,18 +100,18 @@
 
         <div class="form-inline my-2 my-lg-0">
           {% if user.is_authenticated %}
-          <a href="{% url 'logout' %}" class="btn text-white">Logout</a>
-          <a href="#" class="btn text-white"><img class="profile--picture" src="{% static 'images/noAvatar.png' %}"/>{{user.username}}</a>
+          <a href="{% url 'logout' %}" class="btn text-dark">Logout</a>
+          <a href="#" class="btn text-dark"><img class="profile--picture" src="{% static 'images/noAvatar.png' %}"/>{{user.username}}</a>
           {% else %}
-          <a href="{% url 'register' %}" class="btn text-white">Sign up</a>
-          <a href="{% url 'login' %}" class="btn text-white">Login</a>
+          <a href="{% url 'register' %}" class="btn text-dark">Sign up</a>
+          <a href="{% url 'login' %}" class="btn text-dark">Login</a>
           {% endif %}
 
           <a href="{% url 'cart' %}">
             <img id="cart-icon" src="{% static 'images/cart.png' %}" />
           </a>
           {% if cartItems != 0 %}
-          <p id="cart-total">{{cartItems}}</p>
+          <p id="cart-total" class=" text-dark">{{cartItems}}</p>
           {% endif %}
         </div>
       </div>
