--- a/store/templates/store/category.html
+++ b/store/templates/store/category.html
@@ -14,7 +14,7 @@
 
 				<button data-product="{{product.id}}" data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
 				
-				<a class="btn btn-outline-success" href="store/{{product.id}}">View</a>
+				<a class="btn btn-outline-warning" href="store/{{product.id}}">View</a>
 				<p style="display: inline; float: right"><strong>Ksh.{{product.price}}</strong></p>
 
 			</div>
