--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -30,13 +30,10 @@
 						<div class="form-field">
 							<input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
 						</div>
-						<div class="form-field">
-							<input class="form-control" type="text" name="country" placeholder="Zip code..">
-						</div>
 					</div>
 
 					<hr>
-					<input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
+					<input id="form-button" class="btn btn-dark btn-block" type="submit" value="Continue">
 				</form>
 			</div>
 
@@ -44,7 +41,6 @@
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
 				<div id="paypal-button-container"></div>
-				<!-- <button id="make-payment">Make payment</button> -->
 			</div>
 			
 		</div>
