--- a/customers/templates/authenticate/login.html
+++ b/customers/templates/authenticate/login.html
@@ -1,34 +1,39 @@
 {% extends 'store/main.html' %}
+
 {% load static %}
+
 {% block content %}
 
-
-<form action="" method="POST">
-    {% csrf_token %}
-    <div class="row mb-3">
-        <label for="inputEmail3" class="col-sm-2 col-form-label">Username</label>
-        <div class="col-sm-10">
-        <input type="text" class="form-control" name="username">
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-lg">
+                <div class="card-header bg-warning text-white">
+                    <h4>Login</h4>
+                </div>
+                <div class="card-body">
+                    <form action="" method="POST">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Username</label>
+                            <input type="text" class="form-control" id="username" name="username">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password" name="password">
+                        </div>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="checkbox" id="newsletter" name="newsletter">
+                            <label class="form-check-label" for="newsletter">
+                                Sign up for Our Newsletter
+                            </label>
+                        </div>
+                        <button type="submit" class="btn btn-dark">Login</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="row mb-3">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-        <div class="col-sm-10">
-        <input type="password" name="password" class="form-control">
-        </div>
-    </div>
-    <div class="row mb-3">
-        <div class="col-sm-10 offset-sm-2">
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck1">
-            <label class="form-check-label" for="gridCheck1">
-            Sign up for Our Newsletter
-            </label>
-        </div>
-        </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-    </form>
-    
+</div>
 
 {% endblock content %}
