--- a/store/templates/store/ads.html
+++ b/store/templates/store/ads.html
@@ -2,50 +2,55 @@
 {% load static %}
 {% block content %}
 
-
-<div id="carouselExampleIndicators" class="carousel slide"  data-ride="carousel" data-interval="3000">
-	<ol class="carousel-indicators">
-	  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-	  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-	  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-	</ol>
-	<div class="carousel-inner" style="height: 40vh" >
-	  <div class="carousel-item active">
-		<img class="d-block w-100 h-100" src="{% static 'images/banner1.avif' %}" alt="First slide">
-	  </div>
-	  <div class="carousel-item">
-		<img class="d-block w-100" src="{% static 'images/banner2.png' %}" alt="Second slide">
-	  </div>
-	  <div class="carousel-item">
-		<img class="d-block w-100" src="{% static 'images/banner1.avif' %}" alt="Third slide">
-	  </div>
-	</div>
-	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Previous</span>
-	</a>
-	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Next</span>
-	</a>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" style="height: 40vh">
+    <div class="carousel-item active">
+      <img class="d-block w-100 h-100" src="{% static 'images/banner1.avif' %}" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'images/banner2.png' %}" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'images/banner1.avif' %}" alt="Third slide">
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
 <div class="category--header">
-	<h1>Category</h1>
+  <h1>Category</h1>
 </div>
 
-<div class="row category--section" id="category">
-	{% for data in category %}
-	<div class="col-lg-2 box-element-category">
-		<img class="category" src="{{data.imageURL}}">
-		<div class="category--title">
-				<a href="category/{{data.id}}">
-					<h6><strong>{{data.title}}</strong></h6>
-				</a>
-			</div>
+<div class="container my-4">
+	<div class="row category--section" id="category">
+	  {% for data in category %}
+	  <a href="category/{{data.id}}" class="col-md-3 col-sm-6 col-12 mb-4 stretched-link">
+		<div class="card p-0">
+		  <img class="card-img-top" src="{{data.imageURL}}" alt="{{data.title}}" style="height: 200px">
+		  <div class="card-body text-center">
+			<h6 class="card-title">{{data.title}}</h6>
+		  </div>
 		</div>
-	{% endfor %}
-</div>
+	  </a>
+	  {% endfor %}
+	</div>
+  </div>
+  
+  
+  
 
-{% endblock content %}
+  
+
+{% endblock %}
