--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -2,19 +2,12 @@
 {% load static %}
 <html>
   <head>
-    <title>Mohamed Stores</title>
+    <title>Grenlyfe Stores</title>
 
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
     />
-
-    <!-- <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    /> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
   </head>
@@ -74,48 +67,41 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
-      <a class="navbar-brand text-dark" href="{% url 'ads' %}">Mohastores</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+    <nav class="px-4 navbar navbar-expand-lg navbar-dark bg-warning">
+      <a class="navbar-brand text-dark" href="{% url 'ads' %}">Grenlyfe</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      
+    
       <div class="collapse navbar-collapse gap-0" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link text-dark" href="{% url 'store'%}"
-              >Store</a
-            >
+            <a class="nav-link text-dark" href="{% url 'store'%}">Store</a>
           </li>
         </ul>
-        
-
+    
         <div class="form-inline my-2 my-lg-0">
           {% if user.is_authenticated %}
-          <a href="{% url 'logout' %}" class="btn text-dark">Logout</a>
-          <a href="#" class="btn text-dark"><img class="profile--picture" src="{% static 'images/noAvatar.png' %}"/>{{user.username}}</a>
+            <a href="{% url 'logout' %}" class="btn text-dark mr-2">Logout</a>
+            <a href="#" class="btn text-dark">
+              <img class="profile--picture mr-2" src="{% static 'images/noAvatar.png' %}"/>{{user.username}}
+            </a>
           {% else %}
-          <a href="{% url 'register' %}" class="btn text-dark">Sign up</a>
-          <a href="{% url 'login' %}" class="btn text-dark">Login</a>
+            <a href="{% url 'register' %}" class="btn text-dark mr-2">Sign up</a>
+            <a href="{% url 'login' %}" class="btn text-dark mr-2">Login</a>
           {% endif %}
-
+    
           <a href="{% url 'cart' %}">
             <img id="cart-icon" src="{% static 'images/cart.png' %}" />
           </a>
           {% if cartItems != 0 %}
           <p id="cart-total" class=" text-dark">{{cartItems}}</p>
           {% endif %}
+          
         </div>
       </div>
     </nav>
+    
     <div class="search--bar">
       <form class="d-flex" action="/search">
         <input
