--- a/customers/templates/authenticate/register.html
+++ b/customers/templates/authenticate/register.html
@@ -1,30 +1,45 @@
-{% extends 'store/main.html' %} 
-{% load static %} 
-{% load crispy_forms_tags %}
+{% extends 'store/main.html' %}
 
-{% block content %} 
+{% load static %}
 
-{% if form.errors %}
-  <div class="alert alert-danger" role="alert">
-    There was an error while submitting your form.
-  </div>
-{% endif %}
-
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card">
-        <div class="card-body">
-          <h1 class="card-title text-center mb-4">Register</h1>
-          <form method="POST" action="">
-            {% csrf_token %} 
-            {{ form|crispy }}
-            <button type="submit" class="btn btn-primary btn-block mt-4">Register</button>
-          </form>
+{% block content %}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card shadow-lg">
+                    <div class="card-header bg-warning text-white">
+                        <h4>Register</h4>
+                    </div>
+                    <div class="card-body">
+                        <form method="post" action="">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username" name="username" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password1" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password1" name="password1" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password2" class="form-label">Confirm Password</label>
+                                <input type="password" class="form-control" id="password2" name="password2" required>
+                            </div>
+                            <div class="form-check mb-3">
+                                <input class="form-check-input" type="checkbox" id="newsletter" name="newsletter">
+                                <label class="form-check-label" for="newsletter">
+                                    Sign up for Our Newsletter
+                                </label>
+                            </div>
+                            <button type="submit" class="btn btn-dark">Register</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
-
 {% endblock content %}
