--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body{
 	background-color: hsl(120, 3%, 92%);
 }
@@ -14,25 +19,66 @@ h1,h2,h3,h4,h5,h6{
 	padding: 10px;
 }
 
+.custom--nav{
+	display: flex;
+	justify-content: space-between;
+	/* background-color: green; */
+}
+
+.custom--search{
+	display: flex;
+	align-content: center;
+	min-width: 50vw;
+}
+
+.custom--btn{
+	border: none;
+	background: transparent;
+}
+
+.custom--btn:hover{
+	border: 1px solid black;
+}
+
+.custom--link{
+	padding: 6px;
+}
+
+.custom--link:hover{
+	text-decoration: none;
+	border: 1px solid black;
+}
+
 .category--header{
 	display: flex;
 	justify-content: center;
 	margin-top: 5%;
 }
 .category--section{
-	/* background-color: rgba(6, 6, 6, 0.1); */
 	display: flex;
-	justify-content: center;
-	margin: 1% 10%;
-	padding: 1rem;
-	gap: 2rem;
+	gap: 10px;
+	margin: 0 auto;
 }
+
 .category{
 	width: 100%;
 	height: 100%;
-	
 	margin-bottom: 0.9rem;
 }
+
+.card--container{
+ background: transparent;
+}
+
+.title--text{
+	color: black;
+	width: 150px;
+	word-wrap: break-word;
+}
+.title--text:hover{
+	text-decoration: none;
+}
+
 
 .box-element-category{
 	
@@ -140,7 +186,6 @@ h1,h2,h3,h4,h5,h6{
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid #ececec;
-
 }
 
 .quantity{
@@ -148,7 +193,6 @@ h1,h2,h3,h4,h5,h6{
 	font-weight: 700;
 	padding-right:10px;
 	
-
 }
 
 .chg-quantity{
