--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -10,11 +10,9 @@
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
   </head>
 
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
 
 
     <script type="text/javascript">
@@ -69,28 +67,25 @@
     </script>
   </head>
   <body>
-    <nav class="px-4 navbar navbar-expand-lg navbar-dark bg-warning">
-      <a class="navbar-brand text-dark" href="{% url 'ads' %}">Grenlyfe</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse gap-0" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link text-dark" href="{% url 'store'%}">Store</a>
-          </li>
-        </ul>
-    
-        <div class="form-inline my-2 my-lg-0">
+    <section class="bg-warning">
+      <div class="container">
+        <nav class="custom--nav navbar navbar-expand-lg navbar-dark mx-auto">
+        <a class="navbar-brand 3 text-dark" href="{% url 'ads' %}">Grenlyfe</a>
+      
+        <form class="custom--search my-2 mr-2"  action="/search">
+          <input class="form-control mr-sm-2 w-100" name="q" type="search" placeholder="Search" aria-label="Search">
+          <button class="custom--btn" type="submit">Search</button>
+        </form>
+  
+        <div class="form-inline my-2">
           {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}" class="btn text-dark mr-2">Logout</a>
+            <a href="{% url 'logout' %}" class="custom--link text-dark mr-2">Logout</a>
             <a href="#" class="btn text-dark">
               <img class="profile--picture mr-2" src="{% static 'images/noAvatar.png' %}"/>{{user.username}}
             </a>
           {% else %}
-            <a href="{% url 'register' %}" class="btn text-dark mr-2">Sign up</a>
-            <a href="{% url 'login' %}" class="btn text-dark mr-2">Login</a>
+            <a href="{% url 'register' %}" class="custom--link text-dark mr-2">Sign up</a>
+            <a href="{% url 'login' %}" class="custom--link text-dark mr-2">Login</a>
           {% endif %}
     
           <a href="{% url 'cart' %}">
@@ -99,23 +94,11 @@
           {% if cartItems != 0 %}
           <p id="cart-total" class=" text-dark">{{cartItems}}</p>
           {% endif %}
-          
-        </div>
+        </div>    
+      </nav>
       </div>
-    </nav>
+    </section>    
     
-    <div class="search--bar">
-      <form class="d-flex" action="/search">
-        <input
-          class="form-control me-2"
-          name="q"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn" type="submit">Search</button>
-      </form>
-    </div>
 
     <div class="container">
       <br />
